# LW_5d

./: .gitignore  CMakeLists.txt  README.md  main.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
